# python-ai-from-scratch

./: .gitignore  README.md  biodata.db  config.py  pyproject.toml  sequence.fasta  test_sequence.fasta  verified.fasta
Module-1/: calculations.py  module.py  types.py  variables.py
Module-2/: FizzBuzz.py  Functions.py  biggest_number.py  count_vowels.py  elif.py  for-loop.py  grade-function.py  kombinera.py  multiplication_table.py  sum.py  while-loop.py
Module-3/: combine_all.py  create_dictionary.py  create_list.py  dubble.py  loop_dictionary.py
Module-4/: count_dna2.py  kombine_all.py  my_foods.txt  optimize_code.py  sql_injection.py  students.csv  try_except.py  write_o_read.py
Module_4/: AI-ethic-bias.py  add_function.py  calculate_base_content.py  count_dna.py  count_dna2.py  count_dna3.py  csv_create_read.py  pytest_reflection.py
Module_4.8_OOP/: dna_sequence.py
Module_4_8_OOP/: bio_sequence.py  dna_sequence.py  sequence_collection.py
Module_5_2_SQL_Database/: biodata.db  create_database.py  query_to_dataframe.py  sql_in_function.py
Module_5_5_biopython/: create_fasta_file.py  fasta_database_pipeline.py  pdb_structure.py  write_fasta_file.py
Module_5_8_numpy_pandas_linear_algebra_statistics/: data_cleaning.py  linear_algebra.py  numpy_basics.py  pandas_dataframe.py  simulate_sequence.py
Module_6_5_deep_learning/: cancer_classifier_neural_network.py  deep_chem_classification.py  esm_classifier_database_pipeline.py  esm_protein_embedding.py  uniprot_classifier.py  uniprot_fetch_protein.py
Module_6_8_FastAPI/: async.py  async_endpoint.py  main.py  (+3 more)
(+12 files in other folders)
