[project]
name = "python-ai-from-scratch"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    # Core Utilities and Data
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "matplotlib>=3.8.0",
    # Bioinformatics and Drug Discovery Framework
    "biopython>=1.83",
    "deepchem>=2.7.1",
    "fair-esm>=2.0.0",
    # Machine Learning & Deep Learning
    "scikit-learn>=1.4.0",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pytest>=8.0.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
